// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`multivariate (parallel) canvas renders base one axis per category, one polyline per field 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 24,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 91.199997,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 113.599998,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 46.400002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 24,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 91.199997,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 113.599998,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 46.400002,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 80,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 46.400002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 136,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 91.199997,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 80,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 46.400002,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 136,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 91.199997,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 52,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 136,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 57.599998,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 113.599998,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 52,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 136,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 57.599998,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 113.599998,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 24,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 103.2,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 129.6,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 50.4,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 24,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 103.2,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 129.6,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 50.4,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 90,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 50.4,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 156,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 103.2,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 90,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 50.4,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 156,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 103.2,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 57,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 156,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 63.6,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 129.6,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 57,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 156,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 63.6,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 129.6,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`multivariate (parallel) canvas renders color byName fixed-color override 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 24,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 91.199997,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 113.599998,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 46.400002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 24,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 91.199997,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 113.599998,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 46.400002,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 80,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 46.400002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 136,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 91.199997,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 80,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 46.400002,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 136,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 91.199997,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 52,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 136,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 57.599998,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 113.599998,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 52,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 136,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 57.599998,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 113.599998,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 24,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 103.2,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 129.6,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 50.4,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 24,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 103.2,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 129.6,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 50.4,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 90,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 50.4,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 156,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 103.2,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 90,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 50.4,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 156,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 103.2,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 57,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 156,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 63.6,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 129.6,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 57,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 156,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 63.6,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 129.6,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`multivariate (parallel) canvas renders edge cases null gap (a missing value breaks the polyline) 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 24,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 24,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 46.4,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 24,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 24,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 46.4,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 80,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 46.400002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 61.333332,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 91.199997,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 80,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 46.400002,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 61.333332,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 91.199997,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 24,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 24,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 50.4,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 24,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 24,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 50.4,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 90,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 50.4,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 68,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 103.2,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 90,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 50.4,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 68,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 103.2,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`multivariate (parallel) canvas renders edge cases single line (one numeric field) 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 24,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 24,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 24,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 46.400002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 24,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 24,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 24,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 46.400002,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 24,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 24,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 24,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 50.4,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 24,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 24,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 24,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 50.4,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`multivariate (parallel) canvas renders layout vertical (axes top-to-bottom) 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 320,
      "y": 16,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 228.800003,
      "y": 90.666664,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 198.399994,
      "y": 165.333328,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 289.600006,
      "y": 240,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 320,
            "y": 16,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 228.800003,
            "y": 90.666664,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 198.399994,
            "y": 165.333328,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 289.600006,
            "y": 240,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 244,
      "y": 16,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 289.600006,
      "y": 90.666664,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 168,
      "y": 165.333328,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 228.800003,
      "y": 240,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 244,
            "y": 16,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 289.600006,
            "y": 90.666664,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 168,
            "y": 165.333328,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 228.800003,
            "y": 240,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 282,
      "y": 16,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 168,
      "y": 90.666664,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 274.399994,
      "y": 165.333328,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 198.399994,
      "y": 240,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 282,
            "y": 16,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 168,
            "y": 90.666664,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 274.399994,
            "y": 165.333328,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 198.399994,
            "y": 240,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 320,
      "y": 16,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 228.8,
      "y": 104,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 198.4,
      "y": 192,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 289.6,
      "y": 280,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 320,
            "y": 16,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 228.8,
            "y": 104,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 198.4,
            "y": 192,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 289.6,
            "y": 280,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 244,
      "y": 16,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 289.6,
      "y": 104,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 168,
      "y": 192,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 228.8,
      "y": 280,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 244,
            "y": 16,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 289.6,
            "y": 104,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 168,
            "y": 192,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 228.8,
            "y": 280,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 282,
      "y": 16,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 168,
      "y": 104,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 274.4,
      "y": 192,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 198.4,
      "y": 280,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 282,
            "y": 16,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 168,
            "y": 104,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 274.4,
            "y": 192,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 198.4,
            "y": 280,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`multivariate (parallel) canvas renders line style line opacity 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 0.5,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 0.5,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 24,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 91.199997,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 113.599998,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 46.400002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 24,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 91.199997,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 113.599998,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 46.400002,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 80,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 46.400002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 136,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 91.199997,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 80,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 46.400002,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 136,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 91.199997,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 52,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 136,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 57.599998,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 113.599998,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 52,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 136,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 57.599998,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 113.599998,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 0.5,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 0.5,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 24,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 103.2,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 129.6,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 50.4,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 24,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 103.2,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 129.6,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 50.4,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 90,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 50.4,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 156,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 103.2,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 90,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 50.4,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 156,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 103.2,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 57,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 156,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 63.6,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 129.6,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 57,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 156,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 63.6,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 129.6,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`multivariate (parallel) canvas renders line style line width 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": 4,
    },
    "type": "lineWidth",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 24,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 91.199997,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 113.599998,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 46.400002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 24,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 91.199997,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 113.599998,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 46.400002,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 80,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 46.400002,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 136,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 91.199997,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 80,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 46.400002,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 136,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 91.199997,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 52,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666672,
      "y": 136,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333328,
      "y": 57.599998,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 113.599998,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 52,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666672,
            "y": 136,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333328,
            "y": 57.599998,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 113.599998,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": 4,
    },
    "type": "lineWidth",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 24,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 103.2,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 129.6,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 50.4,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 24,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 103.2,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 129.6,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 50.4,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 90,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 50.4,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 156,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 103.2,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 90,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 50.4,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 156,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 103.2,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 57,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "x": 146.666667,
      "y": 156,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 253.333333,
      "y": 63.6,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "x": 360,
      "y": 129.6,
    },
    "type": "lineTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 57,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "x": 146.666667,
            "y": 156,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 253.333333,
            "y": 63.6,
          },
          "type": "lineTo",
        },
        {
          "props": {
            "x": 360,
            "y": 129.6,
          },
          "type": "lineTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`multivariate (parallel) canvas renders smooth curves the polylines through the axis crossings 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 24,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "cpx1": 40,
      "cpx2": 112.341965,
      "cpy1": 24,
      "cpy2": 76.783623,
      "x": 146.666672,
      "y": 91.199997,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 176.341965,
      "cpx2": 223.658035,
      "cpy1": 103.663628,
      "cpy2": 119.83181,
      "x": 253.333328,
      "y": 113.599998,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 287.65802,
      "cpx2": 360,
      "cpy1": 106.391815,
      "cpy2": 46.400002,
      "x": 360,
      "y": 46.400002,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 24,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "cpx1": 40,
            "cpx2": 112.341965,
            "cpy1": 24,
            "cpy2": 76.783623,
            "x": 146.666672,
            "y": 91.199997,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 176.341965,
            "cpx2": 223.658035,
            "cpy1": 103.663628,
            "cpy2": 119.83181,
            "x": 253.333328,
            "y": 113.599998,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 287.65802,
            "cpx2": 360,
            "cpy1": 106.391815,
            "cpy2": 46.400002,
            "x": 360,
            "y": 46.400002,
          },
          "type": "bezierCurveTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 80,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "cpx1": 40,
      "cpx2": 118.167099,
      "cpy1": 80,
      "cpy2": 38.918861,
      "x": 146.666672,
      "y": 46.400002,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 182.167099,
      "cpx2": 218.370178,
      "cpy1": 55.718864,
      "cpy2": 128.657745,
      "x": 253.333328,
      "y": 136,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 282.370178,
      "cpx2": 360,
      "cpy1": 142.097733,
      "cpy2": 91.199997,
      "x": 360,
      "y": 91.199997,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 80,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "cpx1": 40,
            "cpx2": 118.167099,
            "cpy1": 80,
            "cpy2": 38.918861,
            "x": 146.666672,
            "y": 46.400002,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 182.167099,
            "cpx2": 218.370178,
            "cpy1": 55.718864,
            "cpy2": 128.657745,
            "x": 253.333328,
            "y": 136,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 282.370178,
            "cpx2": 360,
            "cpy1": 142.097733,
            "cpy2": 91.199997,
            "x": 360,
            "y": 91.199997,
          },
          "type": "bezierCurveTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 52,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "cpx1": 40,
      "cpx2": 114.261932,
      "cpy1": 52,
      "cpy2": 135.149368,
      "x": 146.666672,
      "y": 136,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 178.261932,
      "cpx2": 219.826508,
      "cpy1": 136.829376,
      "cpy2": 61.118217,
      "x": 253.333328,
      "y": 57.599998,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 283.826508,
      "cpx2": 360,
      "cpy1": 54.398216,
      "cpy2": 113.599998,
      "x": 360,
      "y": 113.599998,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 52,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "cpx1": 40,
            "cpx2": 114.261932,
            "cpy1": 52,
            "cpy2": 135.149368,
            "x": 146.666672,
            "y": 136,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 178.261932,
            "cpx2": 219.826508,
            "cpy1": 136.829376,
            "cpy2": 61.118217,
            "x": 253.333328,
            "y": 57.599998,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 283.826508,
            "cpx2": 360,
            "cpy1": 54.398216,
            "cpy2": 113.599998,
            "x": 360,
            "y": 113.599998,
          },
          "type": "bezierCurveTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "type": "setTransform",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "source-over",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetX",
  },
  {
    "props": {
      "value": 0,
    },
    "type": "shadowOffsetY",
  },
  {
    "props": {
      "value": "#000000",
    },
    "type": "shadowColor",
  },
  {
    "props": {
      "value": "#f2cc0c",
    },
    "type": "strokeStyle",
  },
  {
    "props": {
      "value": 1,
    },
    "type": "globalAlpha",
  },
  {
    "props": {
      "value": "butt",
    },
    "type": "lineCap",
  },
  {
    "props": {
      "value": "miter",
    },
    "type": "lineJoin",
  },
  {
    "props": {
      "value": 10,
    },
    "type": "miterLimit",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 24,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "cpx1": 40,
      "cpx2": 111.638602,
      "cpy1": 24,
      "cpy2": 85.861108,
      "x": 146.666667,
      "y": 103.2,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 175.638602,
      "cpx2": 224.361398,
      "cpy1": 117.541108,
      "cpy2": 136.770554,
      "x": 253.333333,
      "y": 129.6,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 288.361398,
      "cpx2": 360,
      "cpy1": 120.930554,
      "cpy2": 50.4,
      "x": 360,
      "y": 50.4,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 24,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "cpx1": 40,
            "cpx2": 111.638602,
            "cpy1": 24,
            "cpy2": 85.861108,
            "x": 146.666667,
            "y": 103.2,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 175.638602,
            "cpx2": 224.361398,
            "cpy1": 117.541108,
            "cpy2": 136.770554,
            "x": 253.333333,
            "y": 129.6,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 288.361398,
            "cpx2": 360,
            "cpy1": 120.930554,
            "cpy2": 50.4,
            "x": 360,
            "y": 50.4,
          },
          "type": "bezierCurveTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#5794f2",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 90,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "cpx1": 40,
      "cpx2": 119.070759,
      "cpy1": 90,
      "cpy2": 41.862516,
      "x": 146.666667,
      "y": 50.4,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 183.070759,
      "cpx2": 217.637959,
      "cpy1": 61.662516,
      "cpy2": 147.165395,
      "x": 253.333333,
      "y": 156,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 281.637959,
      "cpx2": 360,
      "cpy1": 163.005395,
      "cpy2": 103.2,
      "x": 360,
      "y": 103.2,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 90,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "cpx1": 40,
            "cpx2": 119.070759,
            "cpy1": 90,
            "cpy2": 41.862516,
            "x": 146.666667,
            "y": 50.4,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 183.070759,
            "cpx2": 217.637959,
            "cpy1": 61.662516,
            "cpy2": 147.165395,
            "x": 253.333333,
            "y": 156,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 281.637959,
            "cpx2": 360,
            "cpy1": 163.005395,
            "cpy2": 103.2,
            "x": 360,
            "y": 103.2,
          },
          "type": "bezierCurveTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {
      "value": "#ff9830",
    },
    "type": "strokeStyle",
  },
  {
    "props": {},
    "type": "beginPath",
  },
  {
    "props": {
      "x": 40,
      "y": 57,
    },
    "type": "moveTo",
  },
  {
    "props": {
      "cpx1": 40,
      "cpx2": 114.17471,
      "cpy1": 57,
      "cpy2": 154.99478,
      "x": 146.666667,
      "y": 156,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 178.17471,
      "cpx2": 219.449989,
      "cpy1": 156.97478,
      "cpy2": 67.793064,
      "x": 253.333333,
      "y": 63.6,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "cpx1": 283.449989,
      "cpx2": 360,
      "cpy1": 59.873064,
      "cpy2": 129.6,
      "x": 360,
      "y": 129.6,
    },
    "type": "bezierCurveTo",
  },
  {
    "props": {
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "x": 40,
            "y": 57,
          },
          "type": "moveTo",
        },
        {
          "props": {
            "cpx1": 40,
            "cpx2": 114.17471,
            "cpy1": 57,
            "cpy2": 154.99478,
            "x": 146.666667,
            "y": 156,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 178.17471,
            "cpx2": 219.449989,
            "cpy1": 156.97478,
            "cpy2": 67.793064,
            "x": 253.333333,
            "y": 63.6,
          },
          "type": "bezierCurveTo",
        },
        {
          "props": {
            "cpx1": 283.449989,
            "cpx2": 360,
            "cpy1": 59.873064,
            "cpy2": 129.6,
            "x": 360,
            "y": 129.6,
          },
          "type": "bezierCurveTo",
        },
      ],
    },
    "type": "stroke",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`multivariate (radar) canvas renders one polygon per numeric field, filling the canvas 1`] = `[]`;
